# dirmetz

./: LICENSE  README.md  dirmetz.cabal  kure-doodle.cabal
demo/: Demo01.hs  DemoFileListing.hs
demo/data/: dir-recurse.txt
notes/: sdfmetz.md
src/DirMetz/: Metrics.hs
src/DirMetz/FileSys/: Base.hs  DirRecurseParser.hs  Kure.hs  Metrics1.hs  RegexGlob.hs
src/Doodle/: Metrics.hs
src/Doodle/FileSys/: Base.hs
src/MetricsLib/: Base.hs
