name:             dirmetz
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         https://github.com/stephentetley/dirmetz
category:         Metrics
synopsis:         Metrics for file systems.
description:
  .
  Metrics for file systems.
  . 
  This is an experiment using Kure (The Kansas University Rewrite Engine)
  to implement a suite of file system metrics.
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo01.hs


library
  hs-source-dirs:     src
  build-depends:      base,
                      containers,
                      directory,
                      filepath,
                      mtl,
                      pretty,
                      time,
                      case-insensitive,
                      parsec >= 3.1,
                      kure >= 2.16
  exposed-modules:
    DirMetz.FileSys.Base,
    DirMetz.FileSys.DirRecurseParser,
    DirMetz.FileSys.Kure,
    DirMetz.FileSys.Metrics1
    MetricsLib.Base
    

  other-modules:
     
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
